--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,11 +7,30 @@ SET(CMAKE_C_COMPILER mpicc)
 project(Test_abcd)
 
 set(EXECUTABLE_OUTPUT_PATH ../${CMAKE_BUILD_TYPE})
+set(MUMPS_DIR /opt/MUMPS_4.10.0)
+set(MPI_DIR /usr/lib/openmpi)
+set(BLAS /opt/OpenBLAS)
+set(LAPACK /opt/lapack)
+set(SLAPACK /opt/scalapack-2.0.1)
+set(BLACS /opt/BLACS/LIB)
+set(METIS /opt/ParMetis-3.1.1)
+set(SCOTCH /opt/scotch_5.1.11_esmumps)
 
 find_package (Boost COMPONENTS mpi REQUIRED)
 
-link_directories(../${CMAKE_BUILD_TYPE} ${Boost_LIBRARY_DIRS})
-include_directories(../include ${Boost_INCLUDE_DIRS})
+link_directories(
+  ../${CMAKE_BUILD_TYPE}
+  ${Boost_LIBRARY_DIRS}
+  ${MUMPS_DIR}/lib
+  ${MPI_DIR}
+  ${BLAS}
+  ${LAPACK}
+  ${SLAPACK}
+  ${BLACS}
+  ${METIS}
+  ${SCOTCH}/lib
+  )
+include_directories(../include ${Boost_INCLUDE_DIRS} ${METIS} ${SCOTCH}/include)
 
 add_executable(
 	test_abcd
@@ -21,6 +40,32 @@ add_executable(
 #Configuration de l'édition de liens
 target_link_libraries(
 	test_abcd
+  abcd 
 	${Boost_LIBRARIES}
-	abcd 
+	
+  lapack
+  
+  openblas
+  
+  scalapack
+  
+  blacsf77
+  blacsc
+  blacs
+  blacsf77
+  blacsc
+  
+  parmetis
+  
+  metis
+  
+  esmumps
+  scotch
+  scotcherr
+  
+	dmumps
+	mumps_common
+	
+	mpi_f77
+  mpi_f90
 )
