--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,12 @@ project(abcd CXX C Fortran)
 
 find_package (Boost COMPONENTS mpi serialization unit_test_framework REQUIRED)
 
-# Dependencies
-set(MUMPS_DIR /opt/MUMPS_4.10.0/)
-
 # the library
 set(CMAKE_BUILD_TYPE "Debug")
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BUILD_TYPE}/lib)
 
 
-include_directories(include ${Boost_INCLUDE_DIRS} ${MUMPS_DIR}/include/)
+include_directories(include ${Boost_INCLUDE_DIRS} ${MUMPS_INCLUDE_DIR})
 
 file(
 	GLOB_RECURSE
