modify mumps vars inside...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,15 @@ project(abcd CXX C Fortran)
 
 find_package (Boost COMPONENTS mpi serialization unit_test_framework REQUIRED)
 
+# Dependencies
+set(MUMPS_DIR /opt/MUMPS_4.10.0/)
+
 # the library
 set(CMAKE_BUILD_TYPE "Debug")
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BUILD_TYPE}/lib)
 
 
-include_directories(include ${Boost_INCLUDE_DIRS} ${MUMPS_INCLUDE_DIR})
+include_directories(include ${Boost_INCLUDE_DIRS} ${MUMPS_DIR}/include/)
 
 file(
 	GLOB_RECURSE
