--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 2.6)
 set(CMAKE_CXX_COMPILER mpicxx)
 set(CMAKE_C_COMPILER mpicc)
 set(CMAKE_FC_COMPILER mpif90)
-SET(CMAKE_CXX_FLAGS "-std=c++0x")
+#SET(CMAKE_CXX_FLAGS "-std=c++0x")
 
 project(abcd CXX C Fortran)
 
@@ -13,11 +13,12 @@ find_package (Boost COMPONENTS mpi serialization unit_test_framework REQUIRED)
 set(CMAKE_BUILD_TYPE "Debug")
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BUILD_TYPE}/lib)
 
+#add_definitions(-DCOMPLEX="std::complex<double>")
 
 include_directories(
   include
   ${Boost_INCLUDE_DIRS}
-  ${MUMPS_DIR}/include/
+  $ENV{HOME}/deploy/include/
 )
 
 file(
@@ -27,6 +28,7 @@ file(
     src/*.cpp
     include/*
 )
+
 
 add_library(abcd STATIC ${source_files})
 
