parallel working and debuged

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ project(abcd CXX C Fortran)
 #find_package (Boost COMPONENTS mpi serialization unit_test_framework REQUIRED)
 
 # the library
-set(CMAKE_BUILD_TYPE "Debug")
+#set(CMAKE_BUILD_TYPE "Debug")
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BUILD_TYPE}/lib)
 
 #add_definitions(-DCOMPLEX="std::complex<double>")
