corrected a mistake while importing boost

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,7 +4,7 @@ project(Test_abcd)
 
 set(EXECUTABLE_OUTPUT_PATH ../${CMAKE_BUILD_TYPE})
 
-find_package (Boost COMPONENTS mpi REQUIRED)
+#find_package (Boost COMPONENTS mpi REQUIRED)
 
 message(STATUS "ABCD_PROJECT_DIR=${ABCD_PROJECT_DIR}")
 message(STATUS "ABCD_PROJECT_BINARY_DIR=${ABCD_PROJECT_BINARY_DIR}")
