fx10 does not support d

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ set(ABCD_PROJECT_BINARY_DIR ${PROJECT_BINARY_DIR})
 include_directories(
   include
   ${Boost_INCLUDE_DIRS}
+  ${BOOST_ROOT}
   ${SPARSELIB_DIR}/include
   ${MV_DIR}/include
   ${MUMPS_INCLUDE_DIR}
