--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -71,7 +71,7 @@ if(TEST MATCHES ON)
 
     add_executable(
             test_abcd_c_interface
-            src/c_test.c
+            src/c_exemple.c
             src/c_interface.cc
     )
 
