Added tests for GMGS, seems like it's not working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ if(DEBUG MATCHES ON)
     set(TEST "ON")
     set(TESTER "ON")
     set(CMAKE_CXX_FLAGS "-O0 --coverage")
+    add_definitions(-DDBG)
 endif()
 
 include(abcdCmake.in)
