ignore example other files

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@ docs/doxy/*
 \.*
 !.gitignore
 !.gitmodules
-doc_output/*
+example/*
+!example/example.cpp
+!example/CMakeLists.txt
 
 
 # Compiled Object files
