improved multiple rhs support|

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.6)
 
-set(BUILD_TYPE "Release")
+set(BUILD_TYPE "Debug")
 
 include(../abcdCmake.in)
 project(example)
